fabric/testdata/out/ing_spp-product-details-gateway-post-api-products-configs-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\", \"spp-product-details.write\") -\u003e
      flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\", \"scope\",
      \"realm\")","zalando.org/skipper-predicate":"Weight(3) \u0026\u0026 Path(\"/api/products/configs\")
      \u0026\u0026 Method(\"POST\") \u0026\u0026 Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"application":"spp-product-details","component":"service","controller-uid":"ef23df6c-d613-4395-8ad1-5e0b5def5c78","deployment-id":"d-2oqicnctgrsqujrzesvv1zj46h","environment":"staging","pipeline-id":"l-go7dq38pmsiuequnyf4z162zy","version":"master-56"},"name":"spp-product-details-gateway-post-api-products-configs-all","namespace":"default"},"spec":{"rules":[{"host":"spp-product-details.smart-prod [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid",
      "spp-product-details.write") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(3) && Path("/api/products/configs") && Method("POST")
      && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2021-10-06T10:36:46Z"
  generation: 1
  labels:
    application: spp-product-details
    component: service
    controller-uid: ef23df6c-d613-4395-8ad1-5e0b5def5c78
    deployment-id: d-2oqicnctgrsqujrzesvv1zj46h
    environment: staging
    pipeline-id: l-go7dq38pmsiuequnyf4z162zy
    version: master-56
  name: spp-product-details-gateway-post-api-products-configs-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-details-gateway
    uid: ef23df6c-d613-4395-8ad1-5e0b5def5c78
  resourceVersion: "1364435784"
  uid: 09431b37-4173-4f8e-9a40-c931fb1764d7
spec:
  rules:
  - host: spp-product-details.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-details
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
